--- a/index.html
+++ b/index.html
@@ -251,8 +251,10 @@
             Helpful Links
           </p>
           <p>
-            <a href = "sugano.html" style="color:yellow;"> NEW! Sugano's Tech Tips</a>
+            <a href = "sugano.html"> Sugano's Tech Tips</a>
           </p>
+          <p>
+            <a href = "Phone directory for Tech areas.htm" style="color:yellow;"> NEW Phone Directory for Tech areas</a>
           <p>
           <a href="/static/Contrast Reaction - ACR.pdf" style="color:red;">
           ACR CONTRAST REACTION Protocol
