--- a/index.html
+++ b/index.html
@@ -255,10 +255,9 @@
           </p>
           <p>
             <a href = "Phone directory for Tech areas.htm" style="color:yellow;"> NEW Phone Directory for Tech areas</a>
+          </p>
           <p>
-          <a href="/static/Contrast Reaction - ACR.pdf" style="color:red;">
-          ACR CONTRAST REACTION Protocol
-          </a>
+          <a href="/static/Contrast Reaction - ACR.pdf" style="color:red;"> ACR CONTRAST REACTION Protocol</a>
           </p>
         
           <p text="#ffff99" link="#ffff99" vlink="#ffff99" alink="#ffff99">
