--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
             <a href = "sugano.html"> Sugano's Tech Tips</a>
           </p>
           <p>
-            <a href = "Phone directory for Tech areas.htm" style="color:yellow;"> NEW Phone Directory for Tech areas</a>
+            <a href = "/static/PhonedirectoryforTechareas.htm" style="color:yellow;"> NEW Phone Directory for Tech areas</a>
           </p>
           <p>
             <a href="/static/Contrast Reaction - ACR.pdf" style="color:red;"> ACR CONTRAST REACTION Protocol</a>
